// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`project bundle for a specific manuscript: multimanuscript-project-bundle 1`] = `
Object {
  "doc": Object {
    "attrs": Object {
      "id": "MPManuscript:B3BB2CD8-F944-47C3-9F01-1996DBD417EE",
    },
    "content": Array [
      Object {
        "attrs": Object {
          "category": "",
          "id": "MPSection:C6FD9C5E-C00E-4823-9507-E246E249B66A",
          "pageBreakStyle": undefined,
          "titleSuppressed": false,
        },
        "content": Array [
          Object {
            "content": Array [
              Object {
                "text": "A section heading",
                "type": "text",
              },
            ],
            "type": "section_title",
          },
          Object {
            "attrs": Object {
              "id": "MPParagraphElement:0EAC7ED3-41FB-468F-A267-60664A2F59B7",
              "paragraphStyle": "",
              "placeholder": "",
            },
            "content": Array [
              Object {
                "text": "Ancient reptilian creatures that have a strange relationship with rifts: they are drawn to them and seep up the power of the bridged world in strange ways. Believed by many to be extinct, they tend to avoid the other sentient races.",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
          Object {
            "attrs": Object {
              "category": "",
              "id": "MPSection:EBCC30A6-9123-4CC3-B282-402954ACFD03",
              "pageBreakStyle": undefined,
              "titleSuppressed": false,
            },
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "A table",
                    "type": "text",
                  },
                ],
                "type": "section_title",
              },
              Object {
                "attrs": Object {
                  "expandListing": false,
                  "id": "MPTableElement:36132CFA-A6D0-4D8D-A347-0CF1136002FD",
                  "label": "",
                  "paragraphStyle": "",
                  "suppressCaption": false,
                  "suppressFooter": false,
                  "suppressHeader": false,
                  "tableStyle": "",
                },
                "content": Array [
                  Object {
                    "attrs": Object {
                      "id": "MPTable:20BF6401-3D6A-41F0-B7C3-BAE20B1D5745",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "attrs": Object {
                              "background": null,
                              "colspan": 1,
                              "colwidth": null,
                              "placeholder": "Data",
                              "rowspan": 1,
                            },
                            "content": Array [
                              Object {
                                "text": "Elf",
                                "type": "text",
                              },
                            ],
                            "type": "table_cell",
                          },
                          Object {
                            "attrs": Object {
                              "background": null,
                              "colspan": 1,
                              "colwidth": null,
                              "placeholder": "Data",
                              "rowspan": 1,
                            },
                            "content": Array [
                              Object {
                                "text": "Dwarf",
                                "type": "text",
                              },
                            ],
                            "type": "table_cell",
                          },
                        ],
                        "type": "table_row",
                      },
                      Object {
                        "attrs": Object {
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "attrs": Object {
                              "background": null,
                              "colspan": 1,
                              "colwidth": null,
                              "placeholder": "Data",
                              "rowspan": 1,
                            },
                            "content": Array [
                              Object {
                                "text": "Tall",
                                "type": "text",
                              },
                            ],
                            "type": "table_cell",
                          },
                          Object {
                            "attrs": Object {
                              "background": null,
                              "colspan": 1,
                              "colwidth": null,
                              "placeholder": "Data",
                              "rowspan": 1,
                            },
                            "content": Array [
                              Object {
                                "text": "Short",
                                "type": "text",
                              },
                            ],
                            "type": "table_cell",
                          },
                        ],
                        "type": "table_row",
                      },
                      Object {
                        "attrs": Object {
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "attrs": Object {
                              "background": null,
                              "colspan": 1,
                              "colwidth": null,
                              "placeholder": "Data",
                              "rowspan": 1,
                            },
                            "content": Array [
                              Object {
                                "text": "Long-lived",
                                "type": "text",
                              },
                            ],
                            "type": "table_cell",
                          },
                          Object {
                            "attrs": Object {
                              "background": null,
                              "colspan": 1,
                              "colwidth": null,
                              "placeholder": "Data",
                              "rowspan": 1,
                            },
                            "content": Array [
                              Object {
                                "text": "Live underground",
                                "type": "text",
                              },
                            ],
                            "type": "table_cell",
                          },
                        ],
                        "type": "table_row",
                      },
                      Object {
                        "attrs": Object {
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "attrs": Object {
                              "background": null,
                              "colspan": 1,
                              "colwidth": null,
                              "placeholder": "Data",
                              "rowspan": 1,
                            },
                            "type": "table_cell",
                          },
                          Object {
                            "attrs": Object {
                              "background": null,
                              "colspan": 1,
                              "colwidth": null,
                              "placeholder": "Data",
                              "rowspan": 1,
                            },
                            "content": Array [
                              Object {
                                "text": "Where do they get food?",
                                "type": "text",
                              },
                            ],
                            "type": "table_cell",
                          },
                        ],
                        "type": "table_row",
                      },
                    ],
                    "type": "table",
                  },
                  Object {
                    "content": Array [
                      Object {
                        "text": "Some comparisons",
                        "type": "text",
                      },
                    ],
                    "type": "figcaption",
                  },
                  Object {
                    "attrs": Object {
                      "contents": "",
                      "id": "MPListing:70C7EA88-57D8-4FBB-A661-67EC86D3C9E9",
                      "isExecuting": false,
                      "isExpanded": false,
                      "language": "",
                      "languageKey": "null",
                    },
                    "type": "listing",
                  },
                ],
                "type": "table_element",
              },
              Object {
                "attrs": Object {
                  "id": "MPListElement:EFDBD9B7-19D2-44A4-8686-C31572CCB72C",
                  "paragraphStyle": "",
                },
                "content": Array [
                  Object {
                    "attrs": Object {
                      "placeholder": "List item",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "id": "",
                          "paragraphStyle": "",
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "text": "The Shire",
                            "type": "text",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "list_item",
                  },
                  Object {
                    "attrs": Object {
                      "placeholder": "List item",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "id": "",
                          "paragraphStyle": "",
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "text": "Minas Tirith",
                            "type": "text",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "list_item",
                  },
                  Object {
                    "attrs": Object {
                      "placeholder": "List item",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "id": "",
                          "paragraphStyle": "",
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "text": "Rivendell",
                            "type": "text",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "list_item",
                  },
                ],
                "type": "ordered_list",
              },
              Object {
                "attrs": Object {
                  "id": "MPListElement:5752AF4C-4ED8-4FA5-9BE5-CCAB7DE83C99",
                  "paragraphStyle": "",
                },
                "content": Array [
                  Object {
                    "attrs": Object {
                      "placeholder": "List item",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "id": "",
                          "paragraphStyle": "",
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "text": "Hobbits",
                            "type": "text",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "list_item",
                  },
                  Object {
                    "attrs": Object {
                      "placeholder": "List item",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "id": "",
                          "paragraphStyle": "",
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "text": "Ents",
                            "type": "text",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "list_item",
                  },
                  Object {
                    "attrs": Object {
                      "placeholder": "List item",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "id": "",
                          "paragraphStyle": "",
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "text": "Orcs",
                            "type": "text",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "list_item",
                  },
                  Object {
                    "attrs": Object {
                      "placeholder": "List item",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "id": "",
                          "paragraphStyle": "",
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "text": "Uruk-hai",
                            "type": "text",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "list_item",
                  },
                ],
                "type": "bullet_list",
              },
              Object {
                "attrs": Object {
                  "id": "MPListingElement:53F400DD-55BD-4F99-8C68-E9FB59B1E667",
                  "suppressCaption": true,
                },
                "content": Array [
                  Object {
                    "attrs": Object {
                      "contents": ";; clojure

(defn roll
  ([sides] (roll 1 sides))

  ([dice sides]
  (let [result (+ (int (rand sides)) 1)]
    (if (< dice 2)
      result
      (+ (roll (- dice 1) sides) result)))))
",
                      "id": "MPListing:901B820D-2A8A-4C7C-9C74-F5877A37E3D3",
                      "isExecuting": false,
                      "isExpanded": false,
                      "language": "",
                      "languageKey": "clojure",
                    },
                    "type": "listing",
                  },
                  Object {
                    "type": "figcaption",
                  },
                ],
                "type": "listing_element",
              },
              Object {
                "attrs": Object {
                  "id": "MPEquationElement:D562526E-431C-49DA-855D-F78CDD950FB9",
                  "suppressCaption": true,
                },
                "content": Array [
                  Object {
                    "attrs": Object {
                      "SVGStringRepresentation": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"11.123ex\\" height=\\"1.731ex\\" viewBox=\\"0 -683 4916.6 765\\" style=\\"vertical-align: -0.186ex;\\"><g stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" transform=\\"matrix(1 0 0 -1 0 0)\\"><g data-mml-node=\\"math\\"><g data-mml-node=\\"mi\\"><path data-c=\\"50\\" d=\\"M287 628Q287 635 230 637Q206 637 199 638T192 648Q192 649 194 659Q200 679 203 681T397 683Q587 682 600 680Q664 669 707 631T751 530Q751 453 685 389Q616 321 507 303Q500 302 402 301H307L277 182Q247 66 247 59Q247 55 248 54T255 50T272 48T305 46H336Q342 37 342 35Q342 19 335 5Q330 0 319 0Q316 0 282 1T182 2Q120 2 87 2T51 1Q33 1 33 11Q33 13 36 25Q40 41 44 43T67 46Q94 46 127 49Q141 52 146 61Q149 65 218 339T287 628ZM645 554Q645 567 643 575T634 597T609 619T560 635Q553 636 480 637Q463 637 445 637T416 636T404 636Q391 635 386 627Q384 621 367 550T332 412T314 344Q314 342 395 342H407H430Q542 342 590 392Q617 419 631 471T645 554Z\\"/></g><g data-mml-node=\\"mi\\" transform=\\"translate(751, 0)\\"><path data-c=\\"56\\" d=\\"M52 648Q52 670 65 683H76Q118 680 181 680Q299 680 320 683H330Q336 677 336 674T334 656Q329 641 325 637H304Q282 635 274 635Q245 630 242 620Q242 618 271 369T301 118L374 235Q447 352 520 471T595 594Q599 601 599 609Q599 633 555 637Q537 637 537 648Q537 649 539 661Q542 675 545 679T558 683Q560 683 570 683T604 682T668 681Q737 681 755 683H762Q769 676 769 672Q769 655 760 640Q757 637 743 637Q730 636 719 635T698 630T682 623T670 615T660 608T652 599T645 592L452 282Q272 -9 266 -16Q263 -18 259 -21L241 -22H234Q216 -22 216 -15Q213 -9 177 305Q139 623 138 626Q133 637 76 637H59Q52 642 52 648Z\\"/></g><g data-mml-node=\\"mo\\" transform=\\"translate(1797.8, 0)\\"><path data-c=\\"3D\\" d=\\"M56 347Q56 360 70 367H707Q722 359 722 347Q722 336 708 328L390 327H72Q56 332 56 347ZM56 153Q56 168 72 173H708Q722 163 722 153Q722 140 707 133H70Q56 140 56 153Z\\"/></g><g data-mml-node=\\"mi\\" transform=\\"translate(2853.6, 0)\\"><path data-c=\\"6E\\" d=\\"M21 287Q22 293 24 303T36 341T56 388T89 425T135 442Q171 442 195 424T225 390T231 369Q231 367 232 367L243 378Q304 442 382 442Q436 442 469 415T503 336T465 179T427 52Q427 26 444 26Q450 26 453 27Q482 32 505 65T540 145Q542 153 560 153Q580 153 580 145Q580 144 576 130Q568 101 554 73T508 17T439 -10Q392 -10 371 17T350 73Q350 92 386 193T423 345Q423 404 379 404H374Q288 404 229 303L222 291L189 157Q156 26 151 16Q138 -11 108 -11Q95 -11 87 -5T76 7T74 17Q74 30 112 180T152 343Q153 348 153 366Q153 405 129 405Q91 405 66 305Q60 285 60 284Q58 278 41 278H27Q21 284 21 287Z\\"/></g><g data-mml-node=\\"mi\\" transform=\\"translate(3453.6, 0)\\"><path data-c=\\"52\\" d=\\"M230 637Q203 637 198 638T193 649Q193 676 204 682Q206 683 378 683Q550 682 564 680Q620 672 658 652T712 606T733 563T739 529Q739 484 710 445T643 385T576 351T538 338L545 333Q612 295 612 223Q612 212 607 162T602 80V71Q602 53 603 43T614 25T640 16Q668 16 686 38T712 85Q717 99 720 102T735 105Q755 105 755 93Q755 75 731 36Q693 -21 641 -21H632Q571 -21 531 4T487 82Q487 109 502 166T517 239Q517 290 474 313Q459 320 449 321T378 323H309L277 193Q244 61 244 59Q244 55 245 54T252 50T269 48T302 46H333Q339 38 339 37T336 19Q332 6 326 0H311Q275 2 180 2Q146 2 117 2T71 2T50 1Q33 1 33 10Q33 12 36 24Q41 43 46 45Q50 46 61 46H67Q94 46 127 49Q141 52 146 61Q149 65 218 339T287 628Q287 635 230 637ZM630 554Q630 586 609 608T523 636Q521 636 500 636T462 637H440Q393 637 386 627Q385 624 352 494T319 361Q319 360 388 360Q466 361 492 367Q556 377 592 426Q608 449 619 486T630 554Z\\"/></g><g data-mml-node=\\"mi\\" transform=\\"translate(4212.6, 0)\\"><path data-c=\\"54\\" d=\\"M40 437Q21 437 21 445Q21 450 37 501T71 602L88 651Q93 669 101 677H569H659Q691 677 697 676T704 667Q704 661 687 553T668 444Q668 437 649 437Q640 437 637 437T631 442L629 445Q629 451 635 490T641 551Q641 586 628 604T573 629Q568 630 515 631Q469 631 457 630T439 622Q438 621 368 343T298 60Q298 48 386 46Q418 46 427 45T436 36Q436 31 433 22Q429 4 424 1L422 0Q419 0 415 0Q410 0 363 1T228 2Q99 2 64 0H49Q43 6 43 9T45 27Q49 40 55 46H83H94Q174 46 189 55Q190 56 191 56Q196 59 201 76T241 233Q258 301 269 344Q339 619 339 625Q339 630 310 630H279Q212 630 191 624Q146 614 121 583T67 467Q60 445 57 441T43 437H40Z\\"/></g></g></g></svg>",
                      "TeXRepresentation": "PV = nRT",
                      "id": "MPEquation:D9FE207C-37EB-41C7-AF93-98D6B3281BD4",
                    },
                    "type": "equation",
                  },
                  Object {
                    "type": "figcaption",
                  },
                ],
                "type": "equation_element",
              },
              Object {
                "attrs": Object {
                  "figureLayout": "",
                  "figureStyle": "",
                  "id": "MPFigureElement:3AAE3519-F4A7-4C18-B374-B4F95974C16A",
                  "label": "",
                  "sizeFraction": 0,
                  "suppressCaption": false,
                },
                "content": Array [
                  Object {
                    "attrs": Object {
                      "contentType": "image/png",
                      "embedURL": undefined,
                      "id": "MPFigure:F3D684D3-1C53-44FE-9E66-B927340D571F",
                      "label": "",
                      "listingAttachment": undefined,
                      "src": "",
                    },
                    "content": Array [
                      Object {
                        "type": "figcaption",
                      },
                    ],
                    "type": "figure",
                  },
                  Object {
                    "content": Array [
                      Object {
                        "text": "This is a figure",
                        "type": "text",
                      },
                    ],
                    "type": "figcaption",
                  },
                  Object {
                    "attrs": Object {
                      "contents": "",
                      "id": "MPListing:A4EBE717-DF67-4A50-B264-4A4F59AF1138",
                      "isExecuting": false,
                      "isExpanded": false,
                      "language": "",
                      "languageKey": "null",
                    },
                    "type": "listing",
                  },
                ],
                "type": "figure_element",
              },
            ],
            "type": "section",
          },
        ],
        "type": "section",
      },
    ],
    "type": "manuscript",
  },
  "modelMap": Map {
    "MPProject:ADC69637-C321-4158-8E24-F92068D4727D" => Object {
      "_id": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "_rev": "4-0c576bc91ee60ed440aa7ffb4048598d",
      "createdAt": 1558708766,
      "objectType": "MPProject",
      "owners": Array [
        "User_ydenberg@gmail.com",
      ],
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "Project title",
      "updatedAt": 1558720269.513,
      "viewers": Array [
        "*",
      ],
      "writers": Array [],
    },
    "MPAffiliation:A3318227-B467-4C97-AF84-9271D55D6FBD" => Object {
      "_id": "MPAffiliation:A3318227-B467-4C97-AF84-9271D55D6FBD",
      "addressLine1": "20A Charles River Rd",
      "city": "Waltham",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "country": "United States",
      "county": "Massachusetts",
      "createdAt": 1558719634,
      "department": "Department of Cunning",
      "institution": "University of Cunning",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPAffiliation",
      "postCode": "02453",
      "priority": 0,
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719667,
    },
    "MPContributor:369E6D70-949C-430E-B087-9C1E561BEC13" => Object {
      "_id": "MPContributor:369E6D70-949C-430E-B087-9C1E561BEC13",
      "affiliations": Array [
        "MPAffiliation:A3318227-B467-4C97-AF84-9271D55D6FBD",
      ],
      "bibliographicName": Object {
        "_id": "MPBibliographicName:9678650F-C40B-4EBB-8620-15E335899379",
        "family": "Ydenberg",
        "given": "Casey",
        "objectType": "MPBibliographicName",
        "suffix": "",
      },
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558708767,
      "email": "smeg@caydenberg.io",
      "isCorresponding": true,
      "isJointContributor": false,
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPContributor",
      "priority": 0,
      "role": "author",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719674,
      "userID": "User_ydenberg@gmail.com",
    },
    "MPEquation:D9FE207C-37EB-41C7-AF93-98D6B3281BD4" => Object {
      "SVGStringRepresentation": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"11.123ex\\" height=\\"1.731ex\\" viewBox=\\"0 -683 4916.6 765\\" style=\\"vertical-align: -0.186ex;\\"><g stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" transform=\\"matrix(1 0 0 -1 0 0)\\"><g data-mml-node=\\"math\\"><g data-mml-node=\\"mi\\"><path data-c=\\"50\\" d=\\"M287 628Q287 635 230 637Q206 637 199 638T192 648Q192 649 194 659Q200 679 203 681T397 683Q587 682 600 680Q664 669 707 631T751 530Q751 453 685 389Q616 321 507 303Q500 302 402 301H307L277 182Q247 66 247 59Q247 55 248 54T255 50T272 48T305 46H336Q342 37 342 35Q342 19 335 5Q330 0 319 0Q316 0 282 1T182 2Q120 2 87 2T51 1Q33 1 33 11Q33 13 36 25Q40 41 44 43T67 46Q94 46 127 49Q141 52 146 61Q149 65 218 339T287 628ZM645 554Q645 567 643 575T634 597T609 619T560 635Q553 636 480 637Q463 637 445 637T416 636T404 636Q391 635 386 627Q384 621 367 550T332 412T314 344Q314 342 395 342H407H430Q542 342 590 392Q617 419 631 471T645 554Z\\"/></g><g data-mml-node=\\"mi\\" transform=\\"translate(751, 0)\\"><path data-c=\\"56\\" d=\\"M52 648Q52 670 65 683H76Q118 680 181 680Q299 680 320 683H330Q336 677 336 674T334 656Q329 641 325 637H304Q282 635 274 635Q245 630 242 620Q242 618 271 369T301 118L374 235Q447 352 520 471T595 594Q599 601 599 609Q599 633 555 637Q537 637 537 648Q537 649 539 661Q542 675 545 679T558 683Q560 683 570 683T604 682T668 681Q737 681 755 683H762Q769 676 769 672Q769 655 760 640Q757 637 743 637Q730 636 719 635T698 630T682 623T670 615T660 608T652 599T645 592L452 282Q272 -9 266 -16Q263 -18 259 -21L241 -22H234Q216 -22 216 -15Q213 -9 177 305Q139 623 138 626Q133 637 76 637H59Q52 642 52 648Z\\"/></g><g data-mml-node=\\"mo\\" transform=\\"translate(1797.8, 0)\\"><path data-c=\\"3D\\" d=\\"M56 347Q56 360 70 367H707Q722 359 722 347Q722 336 708 328L390 327H72Q56 332 56 347ZM56 153Q56 168 72 173H708Q722 163 722 153Q722 140 707 133H70Q56 140 56 153Z\\"/></g><g data-mml-node=\\"mi\\" transform=\\"translate(2853.6, 0)\\"><path data-c=\\"6E\\" d=\\"M21 287Q22 293 24 303T36 341T56 388T89 425T135 442Q171 442 195 424T225 390T231 369Q231 367 232 367L243 378Q304 442 382 442Q436 442 469 415T503 336T465 179T427 52Q427 26 444 26Q450 26 453 27Q482 32 505 65T540 145Q542 153 560 153Q580 153 580 145Q580 144 576 130Q568 101 554 73T508 17T439 -10Q392 -10 371 17T350 73Q350 92 386 193T423 345Q423 404 379 404H374Q288 404 229 303L222 291L189 157Q156 26 151 16Q138 -11 108 -11Q95 -11 87 -5T76 7T74 17Q74 30 112 180T152 343Q153 348 153 366Q153 405 129 405Q91 405 66 305Q60 285 60 284Q58 278 41 278H27Q21 284 21 287Z\\"/></g><g data-mml-node=\\"mi\\" transform=\\"translate(3453.6, 0)\\"><path data-c=\\"52\\" d=\\"M230 637Q203 637 198 638T193 649Q193 676 204 682Q206 683 378 683Q550 682 564 680Q620 672 658 652T712 606T733 563T739 529Q739 484 710 445T643 385T576 351T538 338L545 333Q612 295 612 223Q612 212 607 162T602 80V71Q602 53 603 43T614 25T640 16Q668 16 686 38T712 85Q717 99 720 102T735 105Q755 105 755 93Q755 75 731 36Q693 -21 641 -21H632Q571 -21 531 4T487 82Q487 109 502 166T517 239Q517 290 474 313Q459 320 449 321T378 323H309L277 193Q244 61 244 59Q244 55 245 54T252 50T269 48T302 46H333Q339 38 339 37T336 19Q332 6 326 0H311Q275 2 180 2Q146 2 117 2T71 2T50 1Q33 1 33 10Q33 12 36 24Q41 43 46 45Q50 46 61 46H67Q94 46 127 49Q141 52 146 61Q149 65 218 339T287 628Q287 635 230 637ZM630 554Q630 586 609 608T523 636Q521 636 500 636T462 637H440Q393 637 386 627Q385 624 352 494T319 361Q319 360 388 360Q466 361 492 367Q556 377 592 426Q608 449 619 486T630 554Z\\"/></g><g data-mml-node=\\"mi\\" transform=\\"translate(4212.6, 0)\\"><path data-c=\\"54\\" d=\\"M40 437Q21 437 21 445Q21 450 37 501T71 602L88 651Q93 669 101 677H569H659Q691 677 697 676T704 667Q704 661 687 553T668 444Q668 437 649 437Q640 437 637 437T631 442L629 445Q629 451 635 490T641 551Q641 586 628 604T573 629Q568 630 515 631Q469 631 457 630T439 622Q438 621 368 343T298 60Q298 48 386 46Q418 46 427 45T436 36Q436 31 433 22Q429 4 424 1L422 0Q419 0 415 0Q410 0 363 1T228 2Q99 2 64 0H49Q43 6 43 9T45 27Q49 40 55 46H83H94Q174 46 189 55Q190 56 191 56Q196 59 201 76T241 233Q258 301 269 344Q339 619 339 625Q339 630 310 630H279Q212 630 191 624Q146 614 121 583T67 467Q60 445 57 441T43 437H40Z\\"/></g></g></g></svg>",
      "TeXRepresentation": "PV = nRT",
      "_id": "MPEquation:D9FE207C-37EB-41C7-AF93-98D6B3281BD4",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558719954,
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPEquation",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719997,
    },
    "MPEquationElement:D562526E-431C-49DA-855D-F78CDD950FB9" => Object {
      "_id": "MPEquationElement:D562526E-431C-49DA-855D-F78CDD950FB9",
      "caption": "",
      "containedObjectID": "MPEquation:D9FE207C-37EB-41C7-AF93-98D6B3281BD4",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558719954,
      "elementType": "p",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPEquationElement",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "suppressCaption": true,
      "updatedAt": 1558719954,
    },
    "MPFigure:F3D684D3-1C53-44FE-9E66-B927340D571F" => Object {
      "_attachments": Object {
        "image": Object {
          "content_type": "image/png",
          "digest": "sha1-b/Li+zeT6Z86iUhv5Znx2MRMCl0=",
          "length": 59692,
          "revpos": 4,
          "stub": true,
        },
      },
      "_id": "MPFigure:F3D684D3-1C53-44FE-9E66-B927340D571F",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contentType": "image/png",
      "createdAt": 1558720011,
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPFigure",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558720311,
    },
    "MPFigureElement:3AAE3519-F4A7-4C18-B374-B4F95974C16A" => Object {
      "_id": "MPFigureElement:3AAE3519-F4A7-4C18-B374-B4F95974C16A",
      "caption": "This is a figure",
      "containedObjectIDs": Array [
        "MPFigure:F3D684D3-1C53-44FE-9E66-B927340D571F",
      ],
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558720011,
      "elementType": "figure",
      "listingID": "MPListing:A4EBE717-DF67-4A50-B264-4A4F59AF1138",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPFigureElement",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558720091,
    },
    "MPListElement:5752AF4C-4ED8-4FA5-9BE5-CCAB7DE83C99" => Object {
      "_id": "MPListElement:5752AF4C-4ED8-4FA5-9BE5-CCAB7DE83C99",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contents": "<ul xmlns=\\"http://www.w3.org/1999/xhtml\\" id=\\"MPListElement:5752AF4C-4ED8-4FA5-9BE5-CCAB7DE83C99\\" class=\\"MPElement\\" data-object-type=\\"MPListElement\\"><li data-placeholder-text=\\"List item\\">Hobbits</li><li data-placeholder-text=\\"List item\\">Ents</li><li data-placeholder-text=\\"List item\\">Orcs</li><li data-placeholder-text=\\"List item\\">Uruk-hai</li></ul>",
      "createdAt": 1558719800,
      "elementType": "ul",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPListElement",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719821,
    },
    "MPListElement:EFDBD9B7-19D2-44A4-8686-C31572CCB72C" => Object {
      "_id": "MPListElement:EFDBD9B7-19D2-44A4-8686-C31572CCB72C",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contents": "<ol xmlns=\\"http://www.w3.org/1999/xhtml\\" id=\\"MPListElement:EFDBD9B7-19D2-44A4-8686-C31572CCB72C\\" class=\\"MPElement\\" data-object-type=\\"MPListElement\\"><li data-placeholder-text=\\"List item\\">The Shire</li><li data-placeholder-text=\\"List item\\">Minas Tirith</li><li data-placeholder-text=\\"List item\\">Rivendell</li></ol>",
      "createdAt": 1558719771,
      "elementType": "ol",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPListElement",
      "paragraphStyle": "",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719792,
    },
    "MPListing:70C7EA88-57D8-4FBB-A661-67EC86D3C9E9" => Object {
      "_id": "MPListing:70C7EA88-57D8-4FBB-A661-67EC86D3C9E9",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contents": "",
      "createdAt": 1558709469,
      "languageKey": "null",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPListing",
      "sessionID": "8c81f761-45ca-4d06-aae4-4520ed862978",
      "updatedAt": 1558709469,
    },
    "MPListing:901B820D-2A8A-4C7C-9C74-F5877A37E3D3" => Object {
      "_id": "MPListing:901B820D-2A8A-4C7C-9C74-F5877A37E3D3",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contents": ";; clojure

(defn roll
  ([sides] (roll 1 sides))

  ([dice sides]
  (let [result (+ (int (rand sides)) 1)]
    (if (< dice 2)
      result
      (+ (roll (- dice 1) sides) result)))))
",
      "createdAt": 1558719835,
      "languageKey": "clojure",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPListing",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719946,
    },
    "MPListing:A4EBE717-DF67-4A50-B264-4A4F59AF1138" => Object {
      "_id": "MPListing:A4EBE717-DF67-4A50-B264-4A4F59AF1138",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contents": "",
      "createdAt": 1558720011,
      "languageKey": "null",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPListing",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558720011,
    },
    "MPListingElement:53F400DD-55BD-4F99-8C68-E9FB59B1E667" => Object {
      "_id": "MPListingElement:53F400DD-55BD-4F99-8C68-E9FB59B1E667",
      "caption": "",
      "containedObjectID": "MPListing:901B820D-2A8A-4C7C-9C74-F5877A37E3D3",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558719835,
      "elementType": "figure",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPListingElement",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719835,
    },
    "MPManuscript:B3BB2CD8-F944-47C3-9F01-1996DBD417EE" => Object {
      "_id": "MPManuscript:B3BB2CD8-F944-47C3-9F01-1996DBD417EE",
      "bundle": "MPBundle:www-zotero-org-styles-nature",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558720123,
      "objectType": "MPManuscript",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "Uh-oh, here's another manuscript",
      "updatedAt": 1558720136,
    },
    "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8" => Object {
      "_id": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "bundle": "MPBundle:EABCD15A-7749-4D7C-8C9C-6EE2DE594DE5",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558708767,
      "objectType": "MPManuscript",
      "priority": 1,
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "Manuscript Title",
      "updatedAt": 1558719612,
    },
    "MPParagraphElement:0EAC7ED3-41FB-468F-A267-60664A2F59B7" => Object {
      "_id": "MPParagraphElement:0EAC7ED3-41FB-468F-A267-60664A2F59B7",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contents": "<p xmlns=\\"http://www.w3.org/1999/xhtml\\" id=\\"MPParagraphElement:0EAC7ED3-41FB-468F-A267-60664A2F59B7\\" class=\\"MPElement\\" data-object-type=\\"MPParagraphElement\\">Ancient reptilian creatures that have a strange relationship with rifts: they are drawn to them and seep up the power of the bridged world in strange ways. Believed by many to be extinct, they tend to avoid the other sentient races.</p>",
      "createdAt": 1558719686,
      "elementType": "p",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPParagraphElement",
      "placeholderInnerHTML": "",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719719,
    },
    "MPSection:C6FD9C5E-C00E-4823-9507-E246E249B66A" => Object {
      "_id": "MPSection:C6FD9C5E-C00E-4823-9507-E246E249B66A",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558708767,
      "elementIDs": Array [
        "MPParagraphElement:0EAC7ED3-41FB-468F-A267-60664A2F59B7",
      ],
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPSection",
      "path": Array [
        "MPSection:C6FD9C5E-C00E-4823-9507-E246E249B66A",
      ],
      "priority": 1,
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "A section heading",
      "updatedAt": 1558720338,
    },
    "MPSection:EBCC30A6-9123-4CC3-B282-402954ACFD03" => Object {
      "_id": "MPSection:EBCC30A6-9123-4CC3-B282-402954ACFD03",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558720338,
      "elementIDs": Array [
        "MPTableElement:36132CFA-A6D0-4D8D-A347-0CF1136002FD",
        "MPListElement:EFDBD9B7-19D2-44A4-8686-C31572CCB72C",
        "MPListElement:5752AF4C-4ED8-4FA5-9BE5-CCAB7DE83C99",
        "MPListingElement:53F400DD-55BD-4F99-8C68-E9FB59B1E667",
        "MPEquationElement:D562526E-431C-49DA-855D-F78CDD950FB9",
        "MPFigureElement:3AAE3519-F4A7-4C18-B374-B4F95974C16A",
      ],
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPSection",
      "path": Array [
        "MPSection:C6FD9C5E-C00E-4823-9507-E246E249B66A",
        "MPSection:EBCC30A6-9123-4CC3-B282-402954ACFD03",
      ],
      "priority": 2,
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "A table",
      "updatedAt": 1558720341,
    },
    "MPTable:20BF6401-3D6A-41F0-B7C3-BAE20B1D5745" => Object {
      "_id": "MPTable:20BF6401-3D6A-41F0-B7C3-BAE20B1D5745",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contents": "<table id=\\"MPTableElement:36132CFA-A6D0-4D8D-A347-0CF1136002FD\\" class=\\"MPElement\\" data-contained-object-id=\\"MPTable:20BF6401-3D6A-41F0-B7C3-BAE20B1D5745\\"><thead style=\\"display: table-header-group;\\"><tr><th data-placeholder-text=\\"Data\\">Elf</th><th data-placeholder-text=\\"Data\\">Dwarf</th></tr></thead><tbody><tr><td data-placeholder-text=\\"Data\\">Tall</td><td data-placeholder-text=\\"Data\\">Short</td></tr><tr><td data-placeholder-text=\\"Data\\">Long-lived</td><td data-placeholder-text=\\"Data\\">Live underground</td></tr></tbody><tfoot style=\\"display: table-footer-group;\\"><tr><td data-placeholder-text=\\"Data\\" class=\\"placeholder\\"></td><td data-placeholder-text=\\"Data\\">Where do they get food?</td></tr></tfoot></table>",
      "createdAt": 1558709469,
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPTable",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719747,
    },
    "MPTableElement:36132CFA-A6D0-4D8D-A347-0CF1136002FD" => Object {
      "_id": "MPTableElement:36132CFA-A6D0-4D8D-A347-0CF1136002FD",
      "caption": "Some comparisons",
      "containedObjectID": "MPTable:20BF6401-3D6A-41F0-B7C3-BAE20B1D5745",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558709469,
      "elementType": "table",
      "listingID": "MPListing:70C7EA88-57D8-4FBB-A661-67EC86D3C9E9",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPTableElement",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719757,
    },
  },
}
`;

exports[`project bundle with no manuscript parameter: project-bundle 1`] = `
Object {
  "doc": Object {
    "attrs": Object {
      "id": "MPManuscript:B3BB2CD8-F944-47C3-9F01-1996DBD417EE",
    },
    "content": Array [
      Object {
        "attrs": Object {
          "category": "",
          "id": "MPSection:369BC11C-4281-4BED-9AA3-5ABE066BF575",
          "pageBreakStyle": undefined,
          "titleSuppressed": false,
        },
        "content": Array [
          Object {
            "content": Array [
              Object {
                "text": "Section",
                "type": "text",
              },
            ],
            "type": "section_title",
          },
          Object {
            "attrs": Object {
              "category": "",
              "id": "MPSection:786116A4-364C-428B-9B05-FE447B1AEEFB",
              "pageBreakStyle": undefined,
              "titleSuppressed": false,
            },
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "Subsection",
                    "type": "text",
                  },
                ],
                "type": "section_title",
              },
              Object {
                "attrs": Object {
                  "category": "",
                  "id": "MPSection:DC18322C-BC8B-4737-BFC1-052D205657F3",
                  "pageBreakStyle": undefined,
                  "titleSuppressed": false,
                },
                "content": Array [
                  Object {
                    "content": Array [
                      Object {
                        "text": "subsubsection",
                        "type": "text",
                      },
                    ],
                    "type": "section_title",
                  },
                  Object {
                    "attrs": Object {
                      "category": "",
                      "id": "MPSection:BC4F7CFD-EEF2-4733-8AAE-AEC8F76DE4DD",
                      "pageBreakStyle": undefined,
                      "titleSuppressed": false,
                    },
                    "content": Array [
                      Object {
                        "content": Array [
                          Object {
                            "text": "Subsubsubsection",
                            "type": "text",
                          },
                        ],
                        "type": "section_title",
                      },
                      Object {
                        "attrs": Object {
                          "category": "",
                          "id": "MPSection:7021DB67-252D-40D0-810F-6C2C285F8FCC",
                          "pageBreakStyle": undefined,
                          "titleSuppressed": false,
                        },
                        "content": Array [
                          Object {
                            "content": Array [
                              Object {
                                "text": "Subsubsubsubsection",
                                "type": "text",
                              },
                            ],
                            "type": "section_title",
                          },
                          Object {
                            "attrs": Object {
                              "category": "",
                              "id": "MPSection:B5508891-F803-4DD5-AD1D-92A3B4ECFFE6",
                              "pageBreakStyle": undefined,
                              "titleSuppressed": false,
                            },
                            "content": Array [
                              Object {
                                "content": Array [
                                  Object {
                                    "text": "Subsubsubsubsubsection",
                                    "type": "text",
                                  },
                                ],
                                "type": "section_title",
                              },
                              Object {
                                "attrs": Object {
                                  "category": "",
                                  "id": "MPSection:D88308C0-7EC8-46BE-8DCC-661964D706F8",
                                  "pageBreakStyle": undefined,
                                  "titleSuppressed": false,
                                },
                                "content": Array [
                                  Object {
                                    "content": Array [
                                      Object {
                                        "text": "Subsubsubsubsubsubsection",
                                        "type": "text",
                                      },
                                    ],
                                    "type": "section_title",
                                  },
                                  Object {
                                    "attrs": Object {
                                      "id": "MPParagraphElement:5A5E25E4-0677-44D4-B5EA-AA5514113F27",
                                      "paragraphStyle": "",
                                      "placeholder": "",
                                    },
                                    "type": "paragraph",
                                  },
                                ],
                                "type": "section",
                              },
                            ],
                            "type": "section",
                          },
                        ],
                        "type": "section",
                      },
                    ],
                    "type": "section",
                  },
                ],
                "type": "section",
              },
            ],
            "type": "section",
          },
        ],
        "type": "section",
      },
      Object {
        "attrs": Object {
          "category": "",
          "id": "MPSection:C6FD9C5E-C00E-4823-9507-E246E249B66A",
          "pageBreakStyle": undefined,
          "titleSuppressed": false,
        },
        "content": Array [
          Object {
            "content": Array [
              Object {
                "text": "A section heading",
                "type": "text",
              },
            ],
            "type": "section_title",
          },
          Object {
            "attrs": Object {
              "id": "MPParagraphElement:0EAC7ED3-41FB-468F-A267-60664A2F59B7",
              "paragraphStyle": "",
              "placeholder": "",
            },
            "content": Array [
              Object {
                "text": "Ancient reptilian creatures that have a strange relationship with rifts: they are drawn to them and seep up the power of the bridged world in strange ways. Believed by many to be extinct, they tend to avoid the other sentient races.",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
          Object {
            "attrs": Object {
              "category": "",
              "id": "MPSection:EBCC30A6-9123-4CC3-B282-402954ACFD03",
              "pageBreakStyle": undefined,
              "titleSuppressed": false,
            },
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "A table",
                    "type": "text",
                  },
                ],
                "type": "section_title",
              },
              Object {
                "attrs": Object {
                  "expandListing": false,
                  "id": "MPTableElement:36132CFA-A6D0-4D8D-A347-0CF1136002FD",
                  "label": "",
                  "paragraphStyle": "",
                  "suppressCaption": false,
                  "suppressFooter": false,
                  "suppressHeader": false,
                  "tableStyle": "",
                },
                "content": Array [
                  Object {
                    "attrs": Object {
                      "id": "MPTable:20BF6401-3D6A-41F0-B7C3-BAE20B1D5745",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "attrs": Object {
                              "background": null,
                              "colspan": 1,
                              "colwidth": null,
                              "placeholder": "Data",
                              "rowspan": 1,
                            },
                            "content": Array [
                              Object {
                                "text": "Elf",
                                "type": "text",
                              },
                            ],
                            "type": "table_cell",
                          },
                          Object {
                            "attrs": Object {
                              "background": null,
                              "colspan": 1,
                              "colwidth": null,
                              "placeholder": "Data",
                              "rowspan": 1,
                            },
                            "content": Array [
                              Object {
                                "text": "Dwarf",
                                "type": "text",
                              },
                            ],
                            "type": "table_cell",
                          },
                        ],
                        "type": "table_row",
                      },
                      Object {
                        "attrs": Object {
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "attrs": Object {
                              "background": null,
                              "colspan": 1,
                              "colwidth": null,
                              "placeholder": "Data",
                              "rowspan": 1,
                            },
                            "content": Array [
                              Object {
                                "text": "Tall",
                                "type": "text",
                              },
                            ],
                            "type": "table_cell",
                          },
                          Object {
                            "attrs": Object {
                              "background": null,
                              "colspan": 1,
                              "colwidth": null,
                              "placeholder": "Data",
                              "rowspan": 1,
                            },
                            "content": Array [
                              Object {
                                "text": "Short",
                                "type": "text",
                              },
                            ],
                            "type": "table_cell",
                          },
                        ],
                        "type": "table_row",
                      },
                      Object {
                        "attrs": Object {
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "attrs": Object {
                              "background": null,
                              "colspan": 1,
                              "colwidth": null,
                              "placeholder": "Data",
                              "rowspan": 1,
                            },
                            "content": Array [
                              Object {
                                "text": "Long-lived",
                                "type": "text",
                              },
                            ],
                            "type": "table_cell",
                          },
                          Object {
                            "attrs": Object {
                              "background": null,
                              "colspan": 1,
                              "colwidth": null,
                              "placeholder": "Data",
                              "rowspan": 1,
                            },
                            "content": Array [
                              Object {
                                "text": "Live underground",
                                "type": "text",
                              },
                            ],
                            "type": "table_cell",
                          },
                        ],
                        "type": "table_row",
                      },
                      Object {
                        "attrs": Object {
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "attrs": Object {
                              "background": null,
                              "colspan": 1,
                              "colwidth": null,
                              "placeholder": "Data",
                              "rowspan": 1,
                            },
                            "type": "table_cell",
                          },
                          Object {
                            "attrs": Object {
                              "background": null,
                              "colspan": 1,
                              "colwidth": null,
                              "placeholder": "Data",
                              "rowspan": 1,
                            },
                            "content": Array [
                              Object {
                                "text": "Where do they get food?",
                                "type": "text",
                              },
                            ],
                            "type": "table_cell",
                          },
                        ],
                        "type": "table_row",
                      },
                    ],
                    "type": "table",
                  },
                  Object {
                    "content": Array [
                      Object {
                        "text": "Some comparisons",
                        "type": "text",
                      },
                    ],
                    "type": "figcaption",
                  },
                  Object {
                    "attrs": Object {
                      "contents": "",
                      "id": "MPListing:70C7EA88-57D8-4FBB-A661-67EC86D3C9E9",
                      "isExecuting": false,
                      "isExpanded": false,
                      "language": "",
                      "languageKey": "null",
                    },
                    "type": "listing",
                  },
                ],
                "type": "table_element",
              },
              Object {
                "attrs": Object {
                  "id": "MPListElement:EFDBD9B7-19D2-44A4-8686-C31572CCB72C",
                  "paragraphStyle": "",
                },
                "content": Array [
                  Object {
                    "attrs": Object {
                      "placeholder": "List item",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "id": "",
                          "paragraphStyle": "",
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "text": "The Shire",
                            "type": "text",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "list_item",
                  },
                  Object {
                    "attrs": Object {
                      "placeholder": "List item",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "id": "",
                          "paragraphStyle": "",
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "text": "Minas Tirith",
                            "type": "text",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "list_item",
                  },
                  Object {
                    "attrs": Object {
                      "placeholder": "List item",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "id": "",
                          "paragraphStyle": "",
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "text": "Rivendell",
                            "type": "text",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "list_item",
                  },
                ],
                "type": "ordered_list",
              },
              Object {
                "attrs": Object {
                  "id": "MPListElement:5752AF4C-4ED8-4FA5-9BE5-CCAB7DE83C99",
                  "paragraphStyle": "",
                },
                "content": Array [
                  Object {
                    "attrs": Object {
                      "placeholder": "List item",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "id": "",
                          "paragraphStyle": "",
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "text": "Hobbits",
                            "type": "text",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "list_item",
                  },
                  Object {
                    "attrs": Object {
                      "placeholder": "List item",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "id": "",
                          "paragraphStyle": "",
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "text": "Ents",
                            "type": "text",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "list_item",
                  },
                  Object {
                    "attrs": Object {
                      "placeholder": "List item",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "id": "",
                          "paragraphStyle": "",
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "text": "Orcs",
                            "type": "text",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "list_item",
                  },
                  Object {
                    "attrs": Object {
                      "placeholder": "List item",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "id": "",
                          "paragraphStyle": "",
                          "placeholder": "",
                        },
                        "content": Array [
                          Object {
                            "text": "Uruk-hai",
                            "type": "text",
                          },
                        ],
                        "type": "paragraph",
                      },
                    ],
                    "type": "list_item",
                  },
                ],
                "type": "bullet_list",
              },
              Object {
                "attrs": Object {
                  "id": "MPListingElement:53F400DD-55BD-4F99-8C68-E9FB59B1E667",
                  "suppressCaption": true,
                },
                "content": Array [
                  Object {
                    "attrs": Object {
                      "contents": ";; clojure

(defn roll
  ([sides] (roll 1 sides))

  ([dice sides]
  (let [result (+ (int (rand sides)) 1)]
    (if (< dice 2)
      result
      (+ (roll (- dice 1) sides) result)))))
",
                      "id": "MPListing:901B820D-2A8A-4C7C-9C74-F5877A37E3D3",
                      "isExecuting": false,
                      "isExpanded": false,
                      "language": "",
                      "languageKey": "clojure",
                    },
                    "type": "listing",
                  },
                  Object {
                    "type": "figcaption",
                  },
                ],
                "type": "listing_element",
              },
              Object {
                "attrs": Object {
                  "id": "MPEquationElement:D562526E-431C-49DA-855D-F78CDD950FB9",
                  "suppressCaption": true,
                },
                "content": Array [
                  Object {
                    "attrs": Object {
                      "SVGStringRepresentation": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"11.123ex\\" height=\\"1.731ex\\" viewBox=\\"0 -683 4916.6 765\\" style=\\"vertical-align: -0.186ex;\\"><g stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" transform=\\"matrix(1 0 0 -1 0 0)\\"><g data-mml-node=\\"math\\"><g data-mml-node=\\"mi\\"><path data-c=\\"50\\" d=\\"M287 628Q287 635 230 637Q206 637 199 638T192 648Q192 649 194 659Q200 679 203 681T397 683Q587 682 600 680Q664 669 707 631T751 530Q751 453 685 389Q616 321 507 303Q500 302 402 301H307L277 182Q247 66 247 59Q247 55 248 54T255 50T272 48T305 46H336Q342 37 342 35Q342 19 335 5Q330 0 319 0Q316 0 282 1T182 2Q120 2 87 2T51 1Q33 1 33 11Q33 13 36 25Q40 41 44 43T67 46Q94 46 127 49Q141 52 146 61Q149 65 218 339T287 628ZM645 554Q645 567 643 575T634 597T609 619T560 635Q553 636 480 637Q463 637 445 637T416 636T404 636Q391 635 386 627Q384 621 367 550T332 412T314 344Q314 342 395 342H407H430Q542 342 590 392Q617 419 631 471T645 554Z\\"/></g><g data-mml-node=\\"mi\\" transform=\\"translate(751, 0)\\"><path data-c=\\"56\\" d=\\"M52 648Q52 670 65 683H76Q118 680 181 680Q299 680 320 683H330Q336 677 336 674T334 656Q329 641 325 637H304Q282 635 274 635Q245 630 242 620Q242 618 271 369T301 118L374 235Q447 352 520 471T595 594Q599 601 599 609Q599 633 555 637Q537 637 537 648Q537 649 539 661Q542 675 545 679T558 683Q560 683 570 683T604 682T668 681Q737 681 755 683H762Q769 676 769 672Q769 655 760 640Q757 637 743 637Q730 636 719 635T698 630T682 623T670 615T660 608T652 599T645 592L452 282Q272 -9 266 -16Q263 -18 259 -21L241 -22H234Q216 -22 216 -15Q213 -9 177 305Q139 623 138 626Q133 637 76 637H59Q52 642 52 648Z\\"/></g><g data-mml-node=\\"mo\\" transform=\\"translate(1797.8, 0)\\"><path data-c=\\"3D\\" d=\\"M56 347Q56 360 70 367H707Q722 359 722 347Q722 336 708 328L390 327H72Q56 332 56 347ZM56 153Q56 168 72 173H708Q722 163 722 153Q722 140 707 133H70Q56 140 56 153Z\\"/></g><g data-mml-node=\\"mi\\" transform=\\"translate(2853.6, 0)\\"><path data-c=\\"6E\\" d=\\"M21 287Q22 293 24 303T36 341T56 388T89 425T135 442Q171 442 195 424T225 390T231 369Q231 367 232 367L243 378Q304 442 382 442Q436 442 469 415T503 336T465 179T427 52Q427 26 444 26Q450 26 453 27Q482 32 505 65T540 145Q542 153 560 153Q580 153 580 145Q580 144 576 130Q568 101 554 73T508 17T439 -10Q392 -10 371 17T350 73Q350 92 386 193T423 345Q423 404 379 404H374Q288 404 229 303L222 291L189 157Q156 26 151 16Q138 -11 108 -11Q95 -11 87 -5T76 7T74 17Q74 30 112 180T152 343Q153 348 153 366Q153 405 129 405Q91 405 66 305Q60 285 60 284Q58 278 41 278H27Q21 284 21 287Z\\"/></g><g data-mml-node=\\"mi\\" transform=\\"translate(3453.6, 0)\\"><path data-c=\\"52\\" d=\\"M230 637Q203 637 198 638T193 649Q193 676 204 682Q206 683 378 683Q550 682 564 680Q620 672 658 652T712 606T733 563T739 529Q739 484 710 445T643 385T576 351T538 338L545 333Q612 295 612 223Q612 212 607 162T602 80V71Q602 53 603 43T614 25T640 16Q668 16 686 38T712 85Q717 99 720 102T735 105Q755 105 755 93Q755 75 731 36Q693 -21 641 -21H632Q571 -21 531 4T487 82Q487 109 502 166T517 239Q517 290 474 313Q459 320 449 321T378 323H309L277 193Q244 61 244 59Q244 55 245 54T252 50T269 48T302 46H333Q339 38 339 37T336 19Q332 6 326 0H311Q275 2 180 2Q146 2 117 2T71 2T50 1Q33 1 33 10Q33 12 36 24Q41 43 46 45Q50 46 61 46H67Q94 46 127 49Q141 52 146 61Q149 65 218 339T287 628Q287 635 230 637ZM630 554Q630 586 609 608T523 636Q521 636 500 636T462 637H440Q393 637 386 627Q385 624 352 494T319 361Q319 360 388 360Q466 361 492 367Q556 377 592 426Q608 449 619 486T630 554Z\\"/></g><g data-mml-node=\\"mi\\" transform=\\"translate(4212.6, 0)\\"><path data-c=\\"54\\" d=\\"M40 437Q21 437 21 445Q21 450 37 501T71 602L88 651Q93 669 101 677H569H659Q691 677 697 676T704 667Q704 661 687 553T668 444Q668 437 649 437Q640 437 637 437T631 442L629 445Q629 451 635 490T641 551Q641 586 628 604T573 629Q568 630 515 631Q469 631 457 630T439 622Q438 621 368 343T298 60Q298 48 386 46Q418 46 427 45T436 36Q436 31 433 22Q429 4 424 1L422 0Q419 0 415 0Q410 0 363 1T228 2Q99 2 64 0H49Q43 6 43 9T45 27Q49 40 55 46H83H94Q174 46 189 55Q190 56 191 56Q196 59 201 76T241 233Q258 301 269 344Q339 619 339 625Q339 630 310 630H279Q212 630 191 624Q146 614 121 583T67 467Q60 445 57 441T43 437H40Z\\"/></g></g></g></svg>",
                      "TeXRepresentation": "PV = nRT",
                      "id": "MPEquation:D9FE207C-37EB-41C7-AF93-98D6B3281BD4",
                    },
                    "type": "equation",
                  },
                  Object {
                    "type": "figcaption",
                  },
                ],
                "type": "equation_element",
              },
              Object {
                "attrs": Object {
                  "figureLayout": "",
                  "figureStyle": "",
                  "id": "MPFigureElement:3AAE3519-F4A7-4C18-B374-B4F95974C16A",
                  "label": "",
                  "sizeFraction": 0,
                  "suppressCaption": false,
                },
                "content": Array [
                  Object {
                    "attrs": Object {
                      "contentType": "image/png",
                      "embedURL": undefined,
                      "id": "MPFigure:F3D684D3-1C53-44FE-9E66-B927340D571F",
                      "label": "",
                      "listingAttachment": undefined,
                      "src": "",
                    },
                    "content": Array [
                      Object {
                        "type": "figcaption",
                      },
                    ],
                    "type": "figure",
                  },
                  Object {
                    "content": Array [
                      Object {
                        "text": "This is a figure",
                        "type": "text",
                      },
                    ],
                    "type": "figcaption",
                  },
                  Object {
                    "attrs": Object {
                      "contents": "",
                      "id": "MPListing:A4EBE717-DF67-4A50-B264-4A4F59AF1138",
                      "isExecuting": false,
                      "isExpanded": false,
                      "language": "",
                      "languageKey": "null",
                    },
                    "type": "listing",
                  },
                ],
                "type": "figure_element",
              },
            ],
            "type": "section",
          },
        ],
        "type": "section",
      },
    ],
    "type": "manuscript",
  },
  "modelMap": Map {
    "MPProject:ADC69637-C321-4158-8E24-F92068D4727D" => Object {
      "_id": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "_rev": "4-0c576bc91ee60ed440aa7ffb4048598d",
      "createdAt": 1558708766,
      "objectType": "MPProject",
      "owners": Array [
        "User_ydenberg@gmail.com",
      ],
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "Project title",
      "updatedAt": 1558720269.513,
      "viewers": Array [
        "*",
      ],
      "writers": Array [],
    },
    "MPAffiliation:A3318227-B467-4C97-AF84-9271D55D6FBD" => Object {
      "_id": "MPAffiliation:A3318227-B467-4C97-AF84-9271D55D6FBD",
      "addressLine1": "20A Charles River Rd",
      "city": "Waltham",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "country": "United States",
      "county": "Massachusetts",
      "createdAt": 1558719634,
      "department": "Department of Cunning",
      "institution": "University of Cunning",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPAffiliation",
      "postCode": "02453",
      "priority": 0,
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719667,
    },
    "MPContributor:369E6D70-949C-430E-B087-9C1E561BEC13" => Object {
      "_id": "MPContributor:369E6D70-949C-430E-B087-9C1E561BEC13",
      "affiliations": Array [
        "MPAffiliation:A3318227-B467-4C97-AF84-9271D55D6FBD",
      ],
      "bibliographicName": Object {
        "_id": "MPBibliographicName:9678650F-C40B-4EBB-8620-15E335899379",
        "family": "Ydenberg",
        "given": "Casey",
        "objectType": "MPBibliographicName",
        "suffix": "",
      },
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558708767,
      "email": "smeg@caydenberg.io",
      "isCorresponding": true,
      "isJointContributor": false,
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPContributor",
      "priority": 0,
      "role": "author",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719674,
      "userID": "User_ydenberg@gmail.com",
    },
    "MPContributor:58C5EF20-2B67-4FE1-B1E5-294613DD7A6A" => Object {
      "_id": "MPContributor:58C5EF20-2B67-4FE1-B1E5-294613DD7A6A",
      "affiliations": Array [],
      "bibliographicName": Object {
        "_id": "MPBibliographicName:5C1F1C56-F6A4-4422-9159-506DFAAAAD80",
        "family": "Ydenberg",
        "given": "Casey",
        "objectType": "MPBibliographicName",
      },
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558720123,
      "manuscriptID": "MPManuscript:B3BB2CD8-F944-47C3-9F01-1996DBD417EE",
      "objectType": "MPContributor",
      "priority": 0,
      "role": "author",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558720123,
      "userID": "User_ydenberg@gmail.com",
    },
    "MPEquation:D9FE207C-37EB-41C7-AF93-98D6B3281BD4" => Object {
      "SVGStringRepresentation": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"11.123ex\\" height=\\"1.731ex\\" viewBox=\\"0 -683 4916.6 765\\" style=\\"vertical-align: -0.186ex;\\"><g stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" transform=\\"matrix(1 0 0 -1 0 0)\\"><g data-mml-node=\\"math\\"><g data-mml-node=\\"mi\\"><path data-c=\\"50\\" d=\\"M287 628Q287 635 230 637Q206 637 199 638T192 648Q192 649 194 659Q200 679 203 681T397 683Q587 682 600 680Q664 669 707 631T751 530Q751 453 685 389Q616 321 507 303Q500 302 402 301H307L277 182Q247 66 247 59Q247 55 248 54T255 50T272 48T305 46H336Q342 37 342 35Q342 19 335 5Q330 0 319 0Q316 0 282 1T182 2Q120 2 87 2T51 1Q33 1 33 11Q33 13 36 25Q40 41 44 43T67 46Q94 46 127 49Q141 52 146 61Q149 65 218 339T287 628ZM645 554Q645 567 643 575T634 597T609 619T560 635Q553 636 480 637Q463 637 445 637T416 636T404 636Q391 635 386 627Q384 621 367 550T332 412T314 344Q314 342 395 342H407H430Q542 342 590 392Q617 419 631 471T645 554Z\\"/></g><g data-mml-node=\\"mi\\" transform=\\"translate(751, 0)\\"><path data-c=\\"56\\" d=\\"M52 648Q52 670 65 683H76Q118 680 181 680Q299 680 320 683H330Q336 677 336 674T334 656Q329 641 325 637H304Q282 635 274 635Q245 630 242 620Q242 618 271 369T301 118L374 235Q447 352 520 471T595 594Q599 601 599 609Q599 633 555 637Q537 637 537 648Q537 649 539 661Q542 675 545 679T558 683Q560 683 570 683T604 682T668 681Q737 681 755 683H762Q769 676 769 672Q769 655 760 640Q757 637 743 637Q730 636 719 635T698 630T682 623T670 615T660 608T652 599T645 592L452 282Q272 -9 266 -16Q263 -18 259 -21L241 -22H234Q216 -22 216 -15Q213 -9 177 305Q139 623 138 626Q133 637 76 637H59Q52 642 52 648Z\\"/></g><g data-mml-node=\\"mo\\" transform=\\"translate(1797.8, 0)\\"><path data-c=\\"3D\\" d=\\"M56 347Q56 360 70 367H707Q722 359 722 347Q722 336 708 328L390 327H72Q56 332 56 347ZM56 153Q56 168 72 173H708Q722 163 722 153Q722 140 707 133H70Q56 140 56 153Z\\"/></g><g data-mml-node=\\"mi\\" transform=\\"translate(2853.6, 0)\\"><path data-c=\\"6E\\" d=\\"M21 287Q22 293 24 303T36 341T56 388T89 425T135 442Q171 442 195 424T225 390T231 369Q231 367 232 367L243 378Q304 442 382 442Q436 442 469 415T503 336T465 179T427 52Q427 26 444 26Q450 26 453 27Q482 32 505 65T540 145Q542 153 560 153Q580 153 580 145Q580 144 576 130Q568 101 554 73T508 17T439 -10Q392 -10 371 17T350 73Q350 92 386 193T423 345Q423 404 379 404H374Q288 404 229 303L222 291L189 157Q156 26 151 16Q138 -11 108 -11Q95 -11 87 -5T76 7T74 17Q74 30 112 180T152 343Q153 348 153 366Q153 405 129 405Q91 405 66 305Q60 285 60 284Q58 278 41 278H27Q21 284 21 287Z\\"/></g><g data-mml-node=\\"mi\\" transform=\\"translate(3453.6, 0)\\"><path data-c=\\"52\\" d=\\"M230 637Q203 637 198 638T193 649Q193 676 204 682Q206 683 378 683Q550 682 564 680Q620 672 658 652T712 606T733 563T739 529Q739 484 710 445T643 385T576 351T538 338L545 333Q612 295 612 223Q612 212 607 162T602 80V71Q602 53 603 43T614 25T640 16Q668 16 686 38T712 85Q717 99 720 102T735 105Q755 105 755 93Q755 75 731 36Q693 -21 641 -21H632Q571 -21 531 4T487 82Q487 109 502 166T517 239Q517 290 474 313Q459 320 449 321T378 323H309L277 193Q244 61 244 59Q244 55 245 54T252 50T269 48T302 46H333Q339 38 339 37T336 19Q332 6 326 0H311Q275 2 180 2Q146 2 117 2T71 2T50 1Q33 1 33 10Q33 12 36 24Q41 43 46 45Q50 46 61 46H67Q94 46 127 49Q141 52 146 61Q149 65 218 339T287 628Q287 635 230 637ZM630 554Q630 586 609 608T523 636Q521 636 500 636T462 637H440Q393 637 386 627Q385 624 352 494T319 361Q319 360 388 360Q466 361 492 367Q556 377 592 426Q608 449 619 486T630 554Z\\"/></g><g data-mml-node=\\"mi\\" transform=\\"translate(4212.6, 0)\\"><path data-c=\\"54\\" d=\\"M40 437Q21 437 21 445Q21 450 37 501T71 602L88 651Q93 669 101 677H569H659Q691 677 697 676T704 667Q704 661 687 553T668 444Q668 437 649 437Q640 437 637 437T631 442L629 445Q629 451 635 490T641 551Q641 586 628 604T573 629Q568 630 515 631Q469 631 457 630T439 622Q438 621 368 343T298 60Q298 48 386 46Q418 46 427 45T436 36Q436 31 433 22Q429 4 424 1L422 0Q419 0 415 0Q410 0 363 1T228 2Q99 2 64 0H49Q43 6 43 9T45 27Q49 40 55 46H83H94Q174 46 189 55Q190 56 191 56Q196 59 201 76T241 233Q258 301 269 344Q339 619 339 625Q339 630 310 630H279Q212 630 191 624Q146 614 121 583T67 467Q60 445 57 441T43 437H40Z\\"/></g></g></g></svg>",
      "TeXRepresentation": "PV = nRT",
      "_id": "MPEquation:D9FE207C-37EB-41C7-AF93-98D6B3281BD4",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558719954,
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPEquation",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719997,
    },
    "MPEquationElement:D562526E-431C-49DA-855D-F78CDD950FB9" => Object {
      "_id": "MPEquationElement:D562526E-431C-49DA-855D-F78CDD950FB9",
      "caption": "",
      "containedObjectID": "MPEquation:D9FE207C-37EB-41C7-AF93-98D6B3281BD4",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558719954,
      "elementType": "p",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPEquationElement",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "suppressCaption": true,
      "updatedAt": 1558719954,
    },
    "MPFigure:F3D684D3-1C53-44FE-9E66-B927340D571F" => Object {
      "_attachments": Object {
        "image": Object {
          "content_type": "image/png",
          "digest": "sha1-b/Li+zeT6Z86iUhv5Znx2MRMCl0=",
          "length": 59692,
          "revpos": 4,
          "stub": true,
        },
      },
      "_id": "MPFigure:F3D684D3-1C53-44FE-9E66-B927340D571F",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contentType": "image/png",
      "createdAt": 1558720011,
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPFigure",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558720311,
    },
    "MPFigureElement:3AAE3519-F4A7-4C18-B374-B4F95974C16A" => Object {
      "_id": "MPFigureElement:3AAE3519-F4A7-4C18-B374-B4F95974C16A",
      "caption": "This is a figure",
      "containedObjectIDs": Array [
        "MPFigure:F3D684D3-1C53-44FE-9E66-B927340D571F",
      ],
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558720011,
      "elementType": "figure",
      "listingID": "MPListing:A4EBE717-DF67-4A50-B264-4A4F59AF1138",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPFigureElement",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558720091,
    },
    "MPListElement:5752AF4C-4ED8-4FA5-9BE5-CCAB7DE83C99" => Object {
      "_id": "MPListElement:5752AF4C-4ED8-4FA5-9BE5-CCAB7DE83C99",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contents": "<ul xmlns=\\"http://www.w3.org/1999/xhtml\\" id=\\"MPListElement:5752AF4C-4ED8-4FA5-9BE5-CCAB7DE83C99\\" class=\\"MPElement\\" data-object-type=\\"MPListElement\\"><li data-placeholder-text=\\"List item\\">Hobbits</li><li data-placeholder-text=\\"List item\\">Ents</li><li data-placeholder-text=\\"List item\\">Orcs</li><li data-placeholder-text=\\"List item\\">Uruk-hai</li></ul>",
      "createdAt": 1558719800,
      "elementType": "ul",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPListElement",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719821,
    },
    "MPListElement:EFDBD9B7-19D2-44A4-8686-C31572CCB72C" => Object {
      "_id": "MPListElement:EFDBD9B7-19D2-44A4-8686-C31572CCB72C",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contents": "<ol xmlns=\\"http://www.w3.org/1999/xhtml\\" id=\\"MPListElement:EFDBD9B7-19D2-44A4-8686-C31572CCB72C\\" class=\\"MPElement\\" data-object-type=\\"MPListElement\\"><li data-placeholder-text=\\"List item\\">The Shire</li><li data-placeholder-text=\\"List item\\">Minas Tirith</li><li data-placeholder-text=\\"List item\\">Rivendell</li></ol>",
      "createdAt": 1558719771,
      "elementType": "ol",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPListElement",
      "paragraphStyle": "",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719792,
    },
    "MPListing:70C7EA88-57D8-4FBB-A661-67EC86D3C9E9" => Object {
      "_id": "MPListing:70C7EA88-57D8-4FBB-A661-67EC86D3C9E9",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contents": "",
      "createdAt": 1558709469,
      "languageKey": "null",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPListing",
      "sessionID": "8c81f761-45ca-4d06-aae4-4520ed862978",
      "updatedAt": 1558709469,
    },
    "MPListing:901B820D-2A8A-4C7C-9C74-F5877A37E3D3" => Object {
      "_id": "MPListing:901B820D-2A8A-4C7C-9C74-F5877A37E3D3",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contents": ";; clojure

(defn roll
  ([sides] (roll 1 sides))

  ([dice sides]
  (let [result (+ (int (rand sides)) 1)]
    (if (< dice 2)
      result
      (+ (roll (- dice 1) sides) result)))))
",
      "createdAt": 1558719835,
      "languageKey": "clojure",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPListing",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719946,
    },
    "MPListing:A4EBE717-DF67-4A50-B264-4A4F59AF1138" => Object {
      "_id": "MPListing:A4EBE717-DF67-4A50-B264-4A4F59AF1138",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contents": "",
      "createdAt": 1558720011,
      "languageKey": "null",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPListing",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558720011,
    },
    "MPListingElement:53F400DD-55BD-4F99-8C68-E9FB59B1E667" => Object {
      "_id": "MPListingElement:53F400DD-55BD-4F99-8C68-E9FB59B1E667",
      "caption": "",
      "containedObjectID": "MPListing:901B820D-2A8A-4C7C-9C74-F5877A37E3D3",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558719835,
      "elementType": "figure",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPListingElement",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719835,
    },
    "MPManuscript:B3BB2CD8-F944-47C3-9F01-1996DBD417EE" => Object {
      "_id": "MPManuscript:B3BB2CD8-F944-47C3-9F01-1996DBD417EE",
      "bundle": "MPBundle:www-zotero-org-styles-nature",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558720123,
      "objectType": "MPManuscript",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "Uh-oh, here's another manuscript",
      "updatedAt": 1558720136,
    },
    "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8" => Object {
      "_id": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "bundle": "MPBundle:EABCD15A-7749-4D7C-8C9C-6EE2DE594DE5",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558708767,
      "objectType": "MPManuscript",
      "priority": 1,
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "Manuscript Title",
      "updatedAt": 1558719612,
    },
    "MPParagraphElement:0EAC7ED3-41FB-468F-A267-60664A2F59B7" => Object {
      "_id": "MPParagraphElement:0EAC7ED3-41FB-468F-A267-60664A2F59B7",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contents": "<p xmlns=\\"http://www.w3.org/1999/xhtml\\" id=\\"MPParagraphElement:0EAC7ED3-41FB-468F-A267-60664A2F59B7\\" class=\\"MPElement\\" data-object-type=\\"MPParagraphElement\\">Ancient reptilian creatures that have a strange relationship with rifts: they are drawn to them and seep up the power of the bridged world in strange ways. Believed by many to be extinct, they tend to avoid the other sentient races.</p>",
      "createdAt": 1558719686,
      "elementType": "p",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPParagraphElement",
      "placeholderInnerHTML": "",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719719,
    },
    "MPParagraphElement:5A5E25E4-0677-44D4-B5EA-AA5514113F27" => Object {
      "_id": "MPParagraphElement:5A5E25E4-0677-44D4-B5EA-AA5514113F27",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contents": "<p xmlns=\\"http://www.w3.org/1999/xhtml\\" id=\\"MPParagraphElement:5A5E25E4-0677-44D4-B5EA-AA5514113F27\\" class=\\"MPElement\\" data-object-type=\\"MPParagraphElement\\"></p>",
      "createdAt": 1558720223,
      "elementType": "p",
      "manuscriptID": "MPManuscript:B3BB2CD8-F944-47C3-9F01-1996DBD417EE",
      "objectType": "MPParagraphElement",
      "placeholderInnerHTML": "",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558720223,
    },
    "MPSection:369BC11C-4281-4BED-9AA3-5ABE066BF575" => Object {
      "_id": "MPSection:369BC11C-4281-4BED-9AA3-5ABE066BF575",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558720126,
      "elementIDs": Array [],
      "manuscriptID": "MPManuscript:B3BB2CD8-F944-47C3-9F01-1996DBD417EE",
      "objectType": "MPSection",
      "path": Array [
        "MPSection:369BC11C-4281-4BED-9AA3-5ABE066BF575",
      ],
      "priority": 1,
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "Section",
      "updatedAt": 1558720154,
    },
    "MPSection:7021DB67-252D-40D0-810F-6C2C285F8FCC" => Object {
      "_id": "MPSection:7021DB67-252D-40D0-810F-6C2C285F8FCC",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558720193,
      "elementIDs": Array [],
      "manuscriptID": "MPManuscript:B3BB2CD8-F944-47C3-9F01-1996DBD417EE",
      "objectType": "MPSection",
      "path": Array [
        "MPSection:369BC11C-4281-4BED-9AA3-5ABE066BF575",
        "MPSection:786116A4-364C-428B-9B05-FE447B1AEEFB",
        "MPSection:DC18322C-BC8B-4737-BFC1-052D205657F3",
        "MPSection:BC4F7CFD-EEF2-4733-8AAE-AEC8F76DE4DD",
        "MPSection:7021DB67-252D-40D0-810F-6C2C285F8FCC",
      ],
      "priority": 5,
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "Subsubsubsubsection",
      "updatedAt": 1558720213,
    },
    "MPSection:786116A4-364C-428B-9B05-FE447B1AEEFB" => Object {
      "_id": "MPSection:786116A4-364C-428B-9B05-FE447B1AEEFB",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558720146,
      "elementIDs": Array [],
      "manuscriptID": "MPManuscript:B3BB2CD8-F944-47C3-9F01-1996DBD417EE",
      "objectType": "MPSection",
      "path": Array [
        "MPSection:369BC11C-4281-4BED-9AA3-5ABE066BF575",
        "MPSection:786116A4-364C-428B-9B05-FE447B1AEEFB",
      ],
      "priority": 2,
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "Subsection",
      "updatedAt": 1558720168,
    },
    "MPSection:B5508891-F803-4DD5-AD1D-92A3B4ECFFE6" => Object {
      "_id": "MPSection:B5508891-F803-4DD5-AD1D-92A3B4ECFFE6",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558720211,
      "elementIDs": Array [],
      "manuscriptID": "MPManuscript:B3BB2CD8-F944-47C3-9F01-1996DBD417EE",
      "objectType": "MPSection",
      "path": Array [
        "MPSection:369BC11C-4281-4BED-9AA3-5ABE066BF575",
        "MPSection:786116A4-364C-428B-9B05-FE447B1AEEFB",
        "MPSection:DC18322C-BC8B-4737-BFC1-052D205657F3",
        "MPSection:BC4F7CFD-EEF2-4733-8AAE-AEC8F76DE4DD",
        "MPSection:7021DB67-252D-40D0-810F-6C2C285F8FCC",
        "MPSection:B5508891-F803-4DD5-AD1D-92A3B4ECFFE6",
      ],
      "priority": 6,
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "Subsubsubsubsubsection",
      "updatedAt": 1558720229,
    },
    "MPSection:BC4F7CFD-EEF2-4733-8AAE-AEC8F76DE4DD" => Object {
      "_id": "MPSection:BC4F7CFD-EEF2-4733-8AAE-AEC8F76DE4DD",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558720181,
      "elementIDs": Array [],
      "manuscriptID": "MPManuscript:B3BB2CD8-F944-47C3-9F01-1996DBD417EE",
      "objectType": "MPSection",
      "path": Array [
        "MPSection:369BC11C-4281-4BED-9AA3-5ABE066BF575",
        "MPSection:786116A4-364C-428B-9B05-FE447B1AEEFB",
        "MPSection:DC18322C-BC8B-4737-BFC1-052D205657F3",
        "MPSection:BC4F7CFD-EEF2-4733-8AAE-AEC8F76DE4DD",
      ],
      "priority": 4,
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "Subsubsubsection",
      "updatedAt": 1558720204,
    },
    "MPSection:C6FD9C5E-C00E-4823-9507-E246E249B66A" => Object {
      "_id": "MPSection:C6FD9C5E-C00E-4823-9507-E246E249B66A",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558708767,
      "elementIDs": Array [
        "MPParagraphElement:0EAC7ED3-41FB-468F-A267-60664A2F59B7",
      ],
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPSection",
      "path": Array [
        "MPSection:C6FD9C5E-C00E-4823-9507-E246E249B66A",
      ],
      "priority": 1,
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "A section heading",
      "updatedAt": 1558720338,
    },
    "MPSection:D88308C0-7EC8-46BE-8DCC-661964D706F8" => Object {
      "_id": "MPSection:D88308C0-7EC8-46BE-8DCC-661964D706F8",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558720223,
      "elementIDs": Array [
        "MPParagraphElement:5A5E25E4-0677-44D4-B5EA-AA5514113F27",
      ],
      "manuscriptID": "MPManuscript:B3BB2CD8-F944-47C3-9F01-1996DBD417EE",
      "objectType": "MPSection",
      "path": Array [
        "MPSection:369BC11C-4281-4BED-9AA3-5ABE066BF575",
        "MPSection:786116A4-364C-428B-9B05-FE447B1AEEFB",
        "MPSection:DC18322C-BC8B-4737-BFC1-052D205657F3",
        "MPSection:BC4F7CFD-EEF2-4733-8AAE-AEC8F76DE4DD",
        "MPSection:7021DB67-252D-40D0-810F-6C2C285F8FCC",
        "MPSection:B5508891-F803-4DD5-AD1D-92A3B4ECFFE6",
        "MPSection:D88308C0-7EC8-46BE-8DCC-661964D706F8",
      ],
      "priority": 7,
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "Subsubsubsubsubsubsection",
      "updatedAt": 1558720231,
    },
    "MPSection:DC18322C-BC8B-4737-BFC1-052D205657F3" => Object {
      "_id": "MPSection:DC18322C-BC8B-4737-BFC1-052D205657F3",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558720165,
      "elementIDs": Array [],
      "manuscriptID": "MPManuscript:B3BB2CD8-F944-47C3-9F01-1996DBD417EE",
      "objectType": "MPSection",
      "path": Array [
        "MPSection:369BC11C-4281-4BED-9AA3-5ABE066BF575",
        "MPSection:786116A4-364C-428B-9B05-FE447B1AEEFB",
        "MPSection:DC18322C-BC8B-4737-BFC1-052D205657F3",
      ],
      "priority": 3,
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "subsubsection",
      "updatedAt": 1558720183,
    },
    "MPSection:EBCC30A6-9123-4CC3-B282-402954ACFD03" => Object {
      "_id": "MPSection:EBCC30A6-9123-4CC3-B282-402954ACFD03",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558720338,
      "elementIDs": Array [
        "MPTableElement:36132CFA-A6D0-4D8D-A347-0CF1136002FD",
        "MPListElement:EFDBD9B7-19D2-44A4-8686-C31572CCB72C",
        "MPListElement:5752AF4C-4ED8-4FA5-9BE5-CCAB7DE83C99",
        "MPListingElement:53F400DD-55BD-4F99-8C68-E9FB59B1E667",
        "MPEquationElement:D562526E-431C-49DA-855D-F78CDD950FB9",
        "MPFigureElement:3AAE3519-F4A7-4C18-B374-B4F95974C16A",
      ],
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPSection",
      "path": Array [
        "MPSection:C6FD9C5E-C00E-4823-9507-E246E249B66A",
        "MPSection:EBCC30A6-9123-4CC3-B282-402954ACFD03",
      ],
      "priority": 2,
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "title": "A table",
      "updatedAt": 1558720341,
    },
    "MPTable:20BF6401-3D6A-41F0-B7C3-BAE20B1D5745" => Object {
      "_id": "MPTable:20BF6401-3D6A-41F0-B7C3-BAE20B1D5745",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "contents": "<table id=\\"MPTableElement:36132CFA-A6D0-4D8D-A347-0CF1136002FD\\" class=\\"MPElement\\" data-contained-object-id=\\"MPTable:20BF6401-3D6A-41F0-B7C3-BAE20B1D5745\\"><thead style=\\"display: table-header-group;\\"><tr><th data-placeholder-text=\\"Data\\">Elf</th><th data-placeholder-text=\\"Data\\">Dwarf</th></tr></thead><tbody><tr><td data-placeholder-text=\\"Data\\">Tall</td><td data-placeholder-text=\\"Data\\">Short</td></tr><tr><td data-placeholder-text=\\"Data\\">Long-lived</td><td data-placeholder-text=\\"Data\\">Live underground</td></tr></tbody><tfoot style=\\"display: table-footer-group;\\"><tr><td data-placeholder-text=\\"Data\\" class=\\"placeholder\\"></td><td data-placeholder-text=\\"Data\\">Where do they get food?</td></tr></tfoot></table>",
      "createdAt": 1558709469,
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPTable",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719747,
    },
    "MPTableElement:36132CFA-A6D0-4D8D-A347-0CF1136002FD" => Object {
      "_id": "MPTableElement:36132CFA-A6D0-4D8D-A347-0CF1136002FD",
      "caption": "Some comparisons",
      "containedObjectID": "MPTable:20BF6401-3D6A-41F0-B7C3-BAE20B1D5745",
      "containerID": "MPProject:ADC69637-C321-4158-8E24-F92068D4727D",
      "createdAt": 1558709469,
      "elementType": "table",
      "listingID": "MPListing:70C7EA88-57D8-4FBB-A661-67EC86D3C9E9",
      "manuscriptID": "MPManuscript:BCEB682E-C475-4BF7-9470-D6194D3EF0D8",
      "objectType": "MPTableElement",
      "sessionID": "02b8ed9b-43bc-41a0-9732-f478f7fab0cc",
      "updatedAt": 1558719757,
    },
  },
}
`;
